# Minix-Server-of-Mutex-and-CV

./: README.txt
pomoc/: clean.sh  install  install.sh  install_to_file.sh  remake.sh  run_all.sh  run_all_to_file.sh
projekt/: CMakeLists.txt
projekt/etc/usr/: rc
projekt/include/: cv.h
projekt/lib/libc/sys-minix/: cv.c
projekt/servers/cv/: Makefile  cv.conf  includes.h  main.c  queue.h
projekt/servers/pm/: forkexit.c  signal.c  utility.c
testy/: Makefile  mmtest.0.out  mmtest.1.out  mmtest.2.out  mmtest.3.out  mmtest.4.out  test2.sh  test3.sh  test4.sh
testy/src/: bad_prod_cons.c  lock_hang.c  lock_unlock.c  many_cv2.c  prod_cons.c  sigint.c  simple_cv.c  st.c  test3.c  test4.c  tictac.c  tictactac.c  utils.h
